--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "wise_webcomponents",
-  "version": "1.5.2",
+  "version": "1.5.8",
   "description": "react components for PC web",
   "main": "dist/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build-babel": "babel ./main.js --out-file index.js",
-    "start": "cross-env NODE_ENV=development TARGER=development webpack-dev-server --inline --hot",
+    "start": "cross-env NODE_ENV=development TARGER=development COMP=tab webpack-dev-server --inline --hot",
     "build": "npm run clean && cross-env NODE_ENV=production TARGER=umd webpack --bail",
     "clean": "rimraf dist"
   },
