--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wise_webcomponents",
-  "version": "1.5.8",
+  "version": "1.6.2",
   "description": "react components for PC web",
   "main": "dist/main.js",
   "scripts": {
@@ -38,6 +38,7 @@
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.0.1",
     "less-loader": "^4.1.0",
+    "rc-select": "^7.7.6",
     "react-hot-loader": "^4.0.1",
     "rimraf": "^2.6.2",
     "style-loader": "^0.20.3",
