--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "less": "^3.0.1",
     "less-loader": "^4.1.0",
     "rc-select": "^7.7.6",
+    "rc-util": "^4.5.0",
     "react-hot-loader": "^4.0.1",
     "rimraf": "^2.6.2",
     "style-loader": "^0.20.3",
