--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wise_webcomponents",
-  "version": "1.8.0",
+  "version": "1.8.8",
   "description": "react components for PC web",
   "main": "dist/main.js",
   "scripts": {
@@ -8,7 +8,8 @@
     "build-babel": "babel ./main.js --out-file index.js",
     "start": "cross-env NODE_ENV=development TARGER=development COMP=tab webpack-dev-server --inline --hot",
     "prepub": "npm run clean && cross-env NODE_ENV=production TARGER=umd webpack --bail",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "mycompiler": "mycompiler build --watch"
   },
   "keywords": [
     "react",
@@ -39,10 +40,12 @@
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.0.1",
     "less-loader": "^4.1.0",
+    "mycompiler": "^1.0.6",
     "rc-select": "^7.7.6",
     "rc-util": "^4.5.0",
     "react-hot-loader": "^4.0.1",
     "rimraf": "^2.6.2",
+    "ruban": "^0.2.2",
     "style-loader": "^0.20.3",
     "webpack-cli": "^2.0.14",
     "webpack-dev-server": "^2.10.1",
