--- a/demo/carouset/package.json
+++ b/demo/carouset/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "prop-types": "^15.6.1",
     "react": "^16.3.1",
+    "react-html5video": "^2.5.1",
     "wise_webcomponents": "^1.3.2"
   }
 }
